--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: rgba(155, 213, 239, 255);
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Courier New', Courier, monospace; /* ESTILO DA FONTE */
 }
 
 /* Título principal */
